--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -2,27 +2,34 @@
 advanced-mining-drill=Advanced Mining Drill
 elite-mining-drill=Elite Mining Drill
 ultimate-mining-drill=Ultimate Mining Drill
+quantum-mining-drill=Quantum Mining Drill
 big-advanced-mining-drill=Big Advanced Mining Drill
 big-elite-mining-drill=Big Elite Mining Drill
 big-ultimate-mining-drill=Big Ultimate Mining Drill
+big-quantum-mining-drill=Big Quantum Mining Drill
 
 [entity-name]
 advanced-mining-drill=Advanced Mining Drill
 elite-mining-drill=Elite Mining Drill
 ultimate-mining-drill=Ultimate Mining Drill
+quantum-mining-drill=Quantum Mining Drill
 big-advanced-mining-drill=Big Advanced Mining Drill
 big-elite-mining-drill=Big Elite Mining Drill
 big-ultimate-mining-drill=Big Ultimate Mining Drill
+big-quantum-mining-drill=Big Quantum Mining Drill
 
 [technology-name]
 advanced-mining-drill=Advanced Mining
 elite-mining-drill=Elite Mining
 ultimate-mining-drill=Ultimate Mining
+quantum-mining-drill=Quantum Mining Drill
 big-advanced-mining-drill=Big Advanced Mining Drill
 big-elite-mining-drill=Big Elite Mining Drill
 big-ultimate-mining-drill=Big Ultimate Mining Drill
+big-quantum-mining-drill=Big Quantum Mining Drill
 
 [technology-description]
 advanced-mining-drill=An advanced mining drill for faster mining
 elite-mining-drill=An elite mining drill for faster mining
 ultimate-mining-drill=An ultimate mining drill for faster mining
+quantum-mining-drill=A quantum mining drill for faster mining
